// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty-image prop 1`] = `
<div class="win-coupon-list">
  <div class="win-coupon-list__exchange-bar">
    <div class="win-cell win-cell--borderless win-field win-coupon-list__field">
      <div class="win-cell__value win-cell__value--alone win-field__value">
        <div class="win-field__body"><input type="text" placeholder="请输入优惠码" class="win-field__control"></div>
      </div>
    </div><button disabled="disabled" class="win-button win-button--danger win-button--normal win-button--plain win-button--disabled win-coupon-list__exchange">
      <div class="win-button__content"><span class="win-button__text">兑换</span></div>
    </button>
  </div>
  <div class="win-tabs win-tabs--line win-coupon-list__tab">
    <div class="win-tabs__wrap">
      <div role="tablist" class="win-tabs__nav win-tabs__nav--line">
        <div role="tab" aria-selected="true" class="win-tab win-tab--active"><span class="win-tab__text win-tab__text--ellipsis">可用 (0)</span></div>
        <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">不可用 (0)</span></div>
        <div class="win-tabs__line"></div>
      </div>
    </div>
    <div class="win-tabs__content">
      <div role="tabpanel" class="win-tab__pane">
        <div class="win-coupon-list__list win-coupon-list__list--with-bottom" style="height: 628px;">
          <div class="win-coupon-list__empty"><img src="https://img.yzcdn.com/xxx.png">
            <p>暂无优惠券</p>
          </div>
        </div>
      </div>
      <div role="tabpanel" class="win-tab__pane" style="display: none;">
        <!---->
      </div>
    </div>
  </div>
  <div class="win-coupon-list__bottom"><button class="win-button win-button--danger win-button--normal win-button--block win-button--round win-coupon-list__close">
      <div class="win-button__content"><span class="win-button__text">不使用优惠券</span></div>
    </button></div>
</div>
`;

exports[`render coupon cell 1`] = `
<div role="button" tabindex="0" class="win-cell win-cell--clickable win-coupon-cell">
  <div class="win-cell__title"><span>优惠券</span></div>
  <div class="win-cell__value"><span>暂无可用</span></div><i class="win-icon win-icon-arrow win-cell__right-icon">
    <!----></i>
</div>
`;

exports[`render coupon cell with coupon 1`] = `
<div role="button" tabindex="0" class="win-cell win-cell--clickable win-coupon-cell">
  <div class="win-cell__title"><span>优惠券</span></div>
  <div class="win-cell__value win-coupon-cell--selected"><span>-¥1.00</span></div><i class="win-icon win-icon-arrow win-cell__right-icon">
    <!----></i>
</div>
`;

exports[`render coupon list 1`] = `
<div class="win-coupon-list">
  <div class="win-coupon-list__exchange-bar">
    <div class="win-cell win-cell--borderless win-field win-coupon-list__field">
      <div class="win-cell__value win-cell__value--alone win-field__value">
        <div class="win-field__body"><input type="text" placeholder="请输入优惠码" class="win-field__control"></div>
      </div>
    </div><button disabled="disabled" class="win-button win-button--danger win-button--normal win-button--plain win-button--disabled win-coupon-list__exchange">
      <div class="win-button__content"><span class="win-button__text">兑换</span></div>
    </button>
  </div>
  <div class="win-tabs win-tabs--line win-coupon-list__tab">
    <div class="win-tabs__wrap">
      <div role="tablist" class="win-tabs__nav win-tabs__nav--line">
        <div role="tab" aria-selected="true" class="win-tab win-tab--active"><span class="win-tab__text win-tab__text--ellipsis">可用 (6)</span></div>
        <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">不可用 (2)</span></div>
        <div class="win-tabs__line"></div>
      </div>
    </div>
    <div class="win-tabs__content">
      <div role="tabpanel" class="win-tab__pane">
        <div class="win-coupon-list__list win-coupon-list__list--with-bottom" style="height: 628px;">
          <div class="win-coupon">
            <div class="win-coupon__content">
              <div class="win-coupon__head">
                <h2 class="win-coupon__amount"></h2>
                <p class="win-coupon__condition">无使用门槛</p>
              </div>
              <div class="win-coupon__body">
                <p class="win-coupon__name"></p>
                <p class="win-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="win-checkbox win-coupon__corner" size="18">
                  <div class="win-checkbox__icon win-checkbox__icon--round"><i class="win-icon win-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
          </div>
          <div class="win-coupon">
            <div class="win-coupon__content">
              <div class="win-coupon__head">
                <h2 class="win-coupon__amount"><span>¥</span> 1.5</h2>
                <p class="win-coupon__condition">无使用门槛</p>
              </div>
              <div class="win-coupon__body">
                <p class="win-coupon__name">name</p>
                <p class="win-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="true" class="win-checkbox win-coupon__corner" size="18">
                  <div class="win-checkbox__icon win-checkbox__icon--round win-checkbox__icon--checked"><i class="win-icon win-icon-success" style="border-color: #ee0a24; background-color: rgb(238, 10, 36);">
                      <!----></i></div>
                </div>
              </div>
            </div>
            <p class="win-coupon__description">description</p>
          </div>
          <div class="win-coupon">
            <div class="win-coupon__content">
              <div class="win-coupon__head">
                <h2 class="win-coupon__amount"><span>¥</span> 1</h2>
                <p class="win-coupon__condition">无使用门槛</p>
              </div>
              <div class="win-coupon__body">
                <p class="win-coupon__name">name</p>
                <p class="win-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="win-checkbox win-coupon__corner" size="18">
                  <div class="win-checkbox__icon win-checkbox__icon--round"><i class="win-icon win-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
            <p class="win-coupon__description">description</p>
          </div>
          <div class="win-coupon">
            <div class="win-coupon__content">
              <div class="win-coupon__head">
                <h2 class="win-coupon__amount"><span>¥</span> 1.23</h2>
                <p class="win-coupon__condition">无使用门槛</p>
              </div>
              <div class="win-coupon__body">
                <p class="win-coupon__name">name</p>
                <p class="win-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="win-checkbox win-coupon__corner" size="18">
                  <div class="win-checkbox__icon win-checkbox__icon--round"><i class="win-icon win-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
            <p class="win-coupon__description">description</p>
          </div>
          <div class="win-coupon">
            <div class="win-coupon__content">
              <div class="win-coupon__head">
                <h2 class="win-coupon__amount">8.8折</h2>
                <p class="win-coupon__condition">满0.5元可用</p>
              </div>
              <div class="win-coupon__body">
                <p class="win-coupon__name">name</p>
                <p class="win-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="win-checkbox win-coupon__corner" size="18">
                  <div class="win-checkbox__icon win-checkbox__icon--round"><i class="win-icon win-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
          </div>
          <div class="win-coupon">
            <div class="win-coupon__content">
              <div class="win-coupon__head">
                <h2 class="win-coupon__amount">9折</h2>
                <p class="win-coupon__condition">满0.5元可用</p>
              </div>
              <div class="win-coupon__body">
                <p class="win-coupon__name">name</p>
                <p class="win-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="win-checkbox win-coupon__corner" size="18">
                  <div class="win-checkbox__icon win-checkbox__icon--round"><i class="win-icon win-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div role="tabpanel" class="win-tab__pane" style="display: none;">
        <!---->
      </div>
    </div>
  </div>
  <div class="win-coupon-list__bottom"><button class="win-button win-button--danger win-button--normal win-button--block win-button--round win-coupon-list__close">
      <div class="win-button__content"><span class="win-button__text">不使用优惠券</span></div>
    </button></div>
</div>
`;

exports[`render disabled coupon 1`] = `
<div class="win-coupon win-coupon--disabled">
  <div class="win-coupon__content">
    <div class="win-coupon__head">
      <h2 class="win-coupon__amount"><span>¥</span> 1.5</h2>
      <p class="win-coupon__condition">无使用门槛</p>
    </div>
    <div class="win-coupon__body">
      <p class="win-coupon__name">name</p>
      <p class="win-coupon__valid">2017.03.10 - 2017.12.30</p>
    </div>
  </div>
  <p class="win-coupon__description">reason</p>
</div>
`;

exports[`render empty coupon list 1`] = `
<div class="win-coupon-list">
  <div class="win-coupon-list__exchange-bar">
    <div class="win-cell win-cell--borderless win-field win-coupon-list__field">
      <div class="win-cell__value win-cell__value--alone win-field__value">
        <div class="win-field__body"><input type="text" placeholder="请输入优惠码" class="win-field__control"></div>
      </div>
    </div><button disabled="disabled" class="win-button win-button--danger win-button--normal win-button--plain win-button--disabled win-coupon-list__exchange">
      <div class="win-button__content"><span class="win-button__text">兑换</span></div>
    </button>
  </div>
  <div class="win-tabs win-tabs--line win-coupon-list__tab">
    <div class="win-tabs__wrap">
      <div role="tablist" class="win-tabs__nav win-tabs__nav--line">
        <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">可用 (0)</span></div>
        <div role="tab" class="win-tab win-tab--active" aria-selected="true"><span class="win-tab__text win-tab__text--ellipsis">不可用 (0)</span></div>
        <div class="win-tabs__line"></div>
      </div>
    </div>
    <div class="win-tabs__content">
      <div role="tabpanel" class="win-tab__pane" style="display: none;">
        <div class="win-coupon-list__list win-coupon-list__list--with-bottom" style="height: 628px;">
          <div class="win-coupon-list__empty"><img src="https://img.yzcdn.cn/vant/coupon-empty.png">
            <p>暂无优惠券</p>
          </div>
        </div>
      </div>
      <div role="tabpanel" class="win-tab__pane" style="">
        <div class="win-coupon-list__list win-coupon-list__list--with-bottom" style="height: 628px;">
          <div class="win-coupon-list__empty"><img src="https://img.yzcdn.cn/vant/coupon-empty.png">
            <p>暂无优惠券</p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="win-coupon-list__bottom"><button class="win-button win-button--danger win-button--normal win-button--block win-button--round win-coupon-list__close">
      <div class="win-button__content"><span class="win-button__text">不使用优惠券</span></div>
    </button></div>
</div>
`;
